# glia

./: .gitignore  .gitmodules  .lazygit.yml  LINT_FIX_SUMMARY.md  README.md  backend-todo.md  check_output.txt  glia-todo.md  lazygit.yml  mise.toml  pyproject.toml  pytest.ini  ruff.toml  task_tui.json  test_scopes.py  todo.md
.config/mise/conf.d/: api.toml  backend.toml  core.toml  db.toml  gcore.toml  glia_core.toml  gliar.toml  lint.toml  setup.toml  spindown.toml  spinup.toml  sync.toml  test.toml  tui.toml
.mise/tasks/api/: status-wait  status.toml  up
.mise/tasks/db/: down  logs.toml  migrate  migration-plan  migration-rollback  reset  setup-creds.toml  status-wait.toml  status.toml  up
.mise/tasks/glia_core/: build-r  build-r.toml  install-python.toml
.mise/tasks/gliar/: build  build.toml  bundle
.mise/tasks/setup/: backend  db.toml  deps  deps.toml  mise-deps  python-deps  r-deps  r-deps.toml
.mise/tasks/spinup/: api  backend  db
.mise/tasks/sync/: db-migration  lazygit  lazygit.toml  python-versions  python-versions.toml
.mise/tasks/test/: backend  glia_core  glia_python
backend/: alembic.ini  compose.yml  config.py  database.py  main.py  models.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0c69793f9b18_.py  476c9650b98e_.py  5693cef380bf_indexing_jobs_started_at.py  67b655d2cca0_.py  69d02211b0b2_rename_wall_time_and_rss_fields.py  6eeb89a12e02_promote_system_metrics.py  a7be2476bf1f_.py  bceadc807baa_init_jobs_table.py
backend/test/: api_test.py  db_setup_test.py  main_test.py
core/: Cargo.toml  core.pyi  pyproject.toml
core/src/: core.rs  lib.rs  python_module.rs  r_module.rs
gcore/: Cargo.toml  pyproject.toml
gcore/src/: lib.rs  python_module.rs  r_module.rs
glia-python/: README.md  pyproject.toml
glia-python/src/glia_python/: __init__.py
glia_core/: Cargo.toml  glia_core.pyi  pyproject.toml
glia_core/src/: core.rs  lib.rs  python_module.rs  r_module.rs
glia_python/: README.md  pyproject.toml  pytest.ini
glia_python/src/glia_python/: JobMetrics.py  __init__.py  job_tracker.py  network.py  tracker.py
glia_python/test/: config_test.py  conftest.py  job_tracker_test.py  network_test.py  tracker_test.py
gliar/: .Rbuildignore  .Rprofile  .gitignore  .lintr  DESCRIPTION  NAMESPACE
gliar/R/: extendr-wrappers.R  extendr.R  glia.R  network.R  tracker.R  zzz.R
gliar/man/: glia_flush.Rd  glia_init.Rd  glia_track.Rd  glia_wrap.Rd  gliar-package.Rd
gliar/src/: Makevars  entrypoint.c
gliar/src/rust/: Cargo.toml
gliar/tests/: testthat.R
gliar/tests/testthat/: test-glia.R  test-network.R  test-tracker.R
lib/python/glia_common/: pyproject.toml
libs/python/common/: pyproject.toml
libs/python/common/src/common/: system.py
libs/python/glia_common/: pyproject.toml
libs/python/glia_common/src/glia_common/: cli.py  logs.py  system.py
scripts/: cc  conventionalCommits.py  copy_description.sh  getStagedScopes.py  get_staged_scopes.py  postgresSetup.py  setup_deps.sh  setup_postgres.py  setup_postgres_creds.py  sync_python_versions_in_configs.py
scripts/conventionalCommits/: __main__.py  constants.py  scopes.py  stageFiles.py  utils.py
scripts/conventional_commits/: __main__.py  constants.py  scopes.py  test_scopes.py
test/: e2e_glia_python_test.py  e2e_gliar_test.R
test/benchmarks/: benchmark_api_ingestion_rust_core_batching.py  benchmark_client2core.py  benchmark_client2core.r  benchmark_core2db.py  benchmark_core2db_core.py  benchmark_gcore2db_gcore.py  benchmarks.json  run_benchmarks.py
test/e2e/: e2e_api_status_test.py  e2e_glia_python_test.py  e2e_gliar_test.R
test/installations/: Dockerfile.Rtest  README.md  build_rtest.sh
test/perf/: benchmark_core2db.py  run_benchmarks.py
test/stress/: stress_test.py  stress_test.r
tests/: e2e_glia_python_test.py
tui/: .todo.md.swp  Cargo.toml  README.md  buffer_dump.txt  buffer_output.txt  fix_lints.py  task_tui_refactor.json  tasks_out.txt  todo.md  tui-design.md  verify_summaries.rs
tui/docs/: TEST_SPECIFICATIONS.md  UI.md  architecture.md
tui/examples/: regen_ui_docs.rs
tui/src/: action.rs  app.rs  app_tests_patch.rs  components.rs  lib.rs  main.rs  network.rs  table_state.rs  test_bar.rs  test_barchart.rs  test_blame_mode.rs  test_cell_expansion.rs  test_column_mode.rs  test_highlighting.rs  test_selection.rs  test_set_jobs.rs  test_time_window.rs  theme.rs  ui.rs  utils.rs
tui/src/components/: chart.rs  footer.rs  header.rs  modal.rs  table.rs  tabs.rs
tui/tests/: app.rs  chart.rs  chart_layout.rs  charts.rs  footer.rs  header.rs  modal.rs  smoke.rs  t3_test.rs  table.rs  tabs.rs  test_modal_opacity.rs  test_ticks.rs  test_zero_bars.rs
