[project]
name = "Glia"
version = "0.1.0"
requires-python="==3.12.0" # Also listed in  mise.toml and in the [tool.ruff] section of this TOML

dependencies = [
    "alembic==1.17.2",
    "asyncpg==0.31.0",
    "fastapi[standard]==0.128.0",
    "pydantic-settings==2.12.0",
    "sqlmodel==0.0.31",
    "uvicorn==0.40.0",
    "glia-common",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
]

[tool.uv.workspace]
members = [
    "libs/python/glia_common",
]

[tool.uv.sources]
glia-common = { workspace = true, editable = true }
