[project]
name            = "Glia"
version         = "0.1.0"
description     = "Telemetry suite for job-running."
readme          = "README.md"
authors         = [{ name = "luisfmontemayor", email = "lfelipemonte@gmail.com" }]
requires-python = "==3.12.0"                                                       # Also listed in mise.toml, [tool.ty] and glia/glia-python/pyproject.toml

dependencies = [
    "alembic==1.17.2",
    "asyncpg==0.31.0",
    "fastapi[standard]==0.128.0",
    "pydantic-settings==2.12.0",
    "sqlmodel==0.0.31",
    "uvicorn==0.40.0",
    "ty==0.0.8",
    "glia-common",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "httpx==0.28.1",
    "python-dotenv==1.2.1",
]

[tool.uv.workspace]
members = ["libs/python/glia_common", "glia-python"]

[tool.uv.sources]
glia-common = { workspace = true, editable = true }

[tool.ty.environment]
python-version = "3.12" # Also listed in mise.toml, in [project] and glia/glia-python/pyproject.toml

[tool.ty.rules]
"unresolved-attribute" = "error"
"unresolved-import"    = "warn"

# TODO: define a dev dependency group
#[dependency-groups]
