[project]
name            = "Glia"
version         = "0.1.0"
requires-python = ">=3.12.0" # Updated with mise run sync:python-version, and version is hardcoded in glia/.python-version

dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.0",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
    "ty>=0.0.8",
    "glia_common",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
]

[tool.uv.workspace]
members = ["glia_python", "glia_core", "libs/python/glia_common"]

[tool.uv.sources]
glia_common = { workspace = true, editable = true }

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
"unresolved-attribute" = "error"
"unresolved-import"    = "warn"

[dependency-groups]
dev = ["pytest>=9.0.2"]

# TODO: define a dev dependency group
#[dependency-groups]
