[package]
name    = "core"
version = "0.1.0"
edition = "2021"

[lib]
name = "core"
# cdylib -> shared library for Python (.so/.pyd)
# rlib -> for cargo test and CLI binary
# staticlib -> for R package (static C build), added on bundling
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest    = { version = "0.11", features = ["json"] }
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio      = { version = "1", features = ["rt", "sync", "time", "macros"] }
crossbeam-channel = "0.5"
once_cell  = "1.18"

pyo3        = { version = "0.23", features = ["extension-module"], optional = true }
extendr-api = { version = "0.6", optional = true }

[dev-dependencies]
mockito = "1.6"

[features]
default = ["python"]
python  = ["dep:pyo3"]
r       = ["dep:extendr-api"]
