[project]
name            = "glia-python"
version         = "0.1.0"
description     = "Lightweight Python client for the Glia"
authors         = [{ name = "luisfmontemayor", email = "lfelipemonte@gmail.com" }]
requires-python = "==3.12.0"                                                       # Also listed in mise.toml and glia/pyproject.toml in [tool.ty] and [project]
dependencies    = []

[build-system]
requires      = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
