[project]
name            = "glia_python"
version         = "0.1.0"
description     = "Lightweight Python client for the Glia"
authors         = [{ name = "luisfmontemayor", email = "lfelipemonte@gmail.com" }]
requires-python = ">=3.12.0" # Updated with mise run sync:python-version, and version is hardcoded in glia/.python-version
dependencies    = [
    "httpx>=0.28.1",
    "psutil>=7.2.1",
    "pytest==9.0.2",
    "glia_common",
    "glia_core",
]

[tool.uv.sources]
glia_common = { workspace = true }
glia_core = { workspace = true }

[build-system]
requires      = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"