[package]
name = "tui"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
ratatui = "0.26"
crossterm = "0.27"
serde_json = "1.0"
