[project]
name            = "glia-common"
version         = "0.1.0"
description     = "Shared utilities for Glia python scripts"
requires-python = ">=3.12.0"

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glia_common"]
