[project]
name            = "glia_common"
version         = "0.1.0"
description     = "Shared utilities for Glia python scripts"
requires-python = ">=3.12.0" # Updated with mise run sync:python-version, and version is hardcoded in glia/.python-version

[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/glia_common"]
